- Buttons for changing between tabs Channels, Chat, Media Streams and Files
- Preferences are grouped into General, Sound Events, Text to Speech, Connection and Sound System
- Users are now displayed before channels
- Support for dark mode and day/night shift
- Blank nicknames are set to NoName followed by user ID
- More elements are now labellize, specificly some edit fields
IOS client
- Channels are now sorted correctly in TeamTalk on iOS 13 and newer
- French translation has been updated

Version 5.5.1, 2020/05/03
Accessible Windows client
- Fixed crash issue when opening stream media file dialog

Version 5.5, 2020/04/14
Default Qt client
- VBR/CBR selection for OPUS codec 
- Frame size selection for OPUS codec
- Max transmission interval increased to 500 msec
- Audio preprocessor for media file streaming
- Control media file offset before streaming to channel
- Pause media file while streaming to channel
- Test media file playback before streaming to channel
- Restored compatibility with Windows 7 (api-ms-win-core-winrt-l1-1-0.dll)
- Fixed bug where audio recording to single file contained audio from media files
- Fixed bug in .ogg file header for OPUS codec
Accessible Windows client
- VBR/CBR selection for OPUS codec 
- Frame size selection for OPUS codec
- Max transmission interval increased to 500 msec
- Audio preprocessor for media file streaming
- Control media file offset before streaming to channel
- Test media file playback before streaming to channel
- Option to repeat media file playback
- Fixed bug where audio recording to single file contained audio from media files
- Fixed bug in .ogg file header for OPUS codec
Android client
- VBR/CBR selection for OPUS codec 
- Frame size selection for OPUS codec
- Max transmission interval increased to 500 msec
- Portuguese translation
iOS client
- VBR/CBR selection for OPUS codec 
- Frame size selection for OPUS codec
- Max transmission interval increased to 500 msec
- Support for Dark Theme
